force-app/main/default/objects/Opportunity/fields/Non_Standard_T__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_T__c</fullName>
    <label>Non-Standard T&amp;C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>