force-app/main/default/objects/Opportunity/fields/Nuclear_TOE__c.field-meta.xml
<CustomField>
    <fullName>Nuclear_TOE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuclear TOE</label>
    <type>Checkbox</type>
</CustomField>