force-app/main/default/objects/Opportunity/fields/of_SOW_Attachments__c.field-meta.xml
<CustomField>
    <fullName>of_SOW_Attachments__c</fullName>
    <label># of SOW Attachments</label>
    <summaryFilterItems>
        <field>Opportunity_Attachment__c.Attachment_Type__c</field>
        <operation>equals</operation>
        <value>Statement of Work</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Attachment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>