force-app/main/default/objects/Opportunity/fields/Official_Use_Only__c.field-meta.xml
<CustomField>
    <fullName>Official_Use_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official Use Only</label>
    <type>Checkbox</type>
</CustomField>