force-app/main/default/objects/Opportunity/fields/Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Code__c</fullName>
    <label>Organization Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>