force-app/main/default/objects/Opportunity/fields/Organization_Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Organization_Conflict_of_Interest__c</fullName>
    <label>Please Explain Below</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>