force-app/main/default/objects/Opportunity/fields/PAAA_Comments__c.field-meta.xml
<CustomField>
    <fullName>PAAA_Comments__c</fullName>
    <label>PAAA Comments</label>
    <type>TextArea</type>
</CustomField>