force-app/main/default/objects/Opportunity/fields/PAAA_Details__c.field-meta.xml
<CustomField>
    <fullName>PAAA_Details__c</fullName>
    <label>PAAA Details</label>
    <type>TextArea</type>
</CustomField>