force-app/main/default/objects/Opportunity/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <inlineHelpText>In each line add the Participant&apos;s name and detailed contact information</inlineHelpText>
    <label>Participants</label>
    <type>TextArea</type>
</CustomField>