force-app/main/default/objects/Opportunity/fields/Performance_Measures_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Performance_Measures_Expectations__c</fullName>
    <label>Performance Measures / Expectations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>