force-app/main/default/objects/Opportunity/fields/Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain__c</fullName>
    <label>Please Explain</label>
    <type>TextArea</type>
</CustomField>