force-app/main/default/objects/Opportunity/fields/PNNL_ACT_Office2__c.field-meta.xml
<CustomField>
    <fullName>PNNL_ACT_Office2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNNL ACT Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNNL_ACT_Office__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>