force-app/main/default/objects/Opportunity/fields/PNNL_ACT_Office__c.field-meta.xml
<CustomField>
    <fullName>PNNL_ACT_Office__c</fullName>
    <label>PNNL ACT Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>