force-app/main/default/objects/Opportunity/fields/PNNL_ACT_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_ACT_Submit_Approval_Checkbox__c</fullName>
    <description>Future Recommendation is to leverage Salesforce Trigger or Flow</description>
    <formula>AND(
RecordType.Name = &quot;ACT&quot;,
ISPICKVAL(StageName,&quot;Proposal Draft&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(Project_Manager3__c)),
NOT(ISBLANK(PNNL_ACT_Office2__c)),
NOT(ISBLANK(PNNL_IP_Approver__c)),
NOT(ISBLANK(PNSOACTReviewer__c)),
NOT(ISBLANK(PNSO_Coordinator2__c)),
NOT(ISBLANK(PNSO_Technical_Rep2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACT Submit  Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>