force-app/main/default/objects/Opportunity/fields/PNNL_Budget_Reporting_Number__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Budget_Reporting_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget &amp; Reporting Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget_Reporting_Code__c.PNNL_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only active B&amp;R Numbers are available for search.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Budget_Reporting_Code__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>