force-app/main/default/objects/Opportunity/fields/PNNL_DOE_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_DOE_Submit_Approval_Checkbox__c</fullName>
    <description>Future Recommendation is to leverage SF Trigger or Flow</description>
    <formula>AND(
RecordType.Name = &quot;DOE Direct&quot;,
ISPICKVAL(StageName,&quot;Proposal Preparation&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(PNSO_Technical_Rep2__c)),

OR(
NOT(ISBLANK(PNNL_Work_Proposal_Manager2__c)),
NOT(ISBLANK(Project_Manager3__c))
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOE Submit Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>