force-app/main/default/objects/Opportunity/fields/PNNL_F_SPP_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_F_SPP_Submit_Approval_Checkbox__c</fullName>
    <description>Future Recommendation is to leverage a SF Trigger or Flow</description>
    <formula>AND(
RecordType.Name = &quot;F-SPP&quot;,
ISPICKVAL(StageName,&quot;Proposal Draft&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(Project_Manager__c)),
NOT(ISBLANK(SPP_Office_Reviewer2__c)),
NOT(ISBLANK(DOE_Site_Office_Approver2__c)),
NOT(ISBLANK(PNSO_Technical_Rep2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F-SPP Submit Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>