force-app/main/default/objects/Opportunity/fields/PNNL_Integration_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Integration_Status_Name__c</fullName>
    <label>PNNL Integration Status Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>