force-app/main/default/objects/Opportunity/fields/PNNL_IP_Approver__c.field-meta.xml
<CustomField>
    <fullName>PNNL_IP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNNL IP Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesHb9J</relationshipName>
    <type>Lookup</type>
</CustomField>