force-app/main/default/objects/Opportunity/fields/PNNL_IWO_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_IWO_Submit_Approval_Checkbox__c</fullName>
    <description>Future Recommendation is to leverage SF Triggers or Flow</description>
    <formula>AND( 
RecordType.Name = &quot;IWO&quot;,
ISPICKVAL(StageName,&quot;Proposal Preparation&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(IWO_Specialist__c)),
NOT(ISBLANK(PNSO_Proposal_Reviewer__c)), 
NOT(ISBLANK(PNSO_Technical_Rep2__c)),
NOT(ISBLANK(PNSO_Contracting_Officer2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IWO Submit Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>