force-app/main/default/objects/Opportunity/fields/PNNL_NF_SPP_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_NF_SPP_Submit_Approval_Checkbox__c</fullName>
    <description>Future Recommendation is to leverage SF Trigger or Flow</description>
    <formula>AND(
RecordType.Name = &quot;NF-SPP&quot;,
ISPICKVAL(StageName,&quot;Proposal Preparation&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(Project_Manager3__c)),
NOT(ISBLANK(SPP_Office_Reviewer2__c)),
NOT(ISBLANK(PNSO_Technical_Rep2__c)),
NOT(ISBLANK(PNSO_Contracting_Officer2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NF-SPP Submit Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>