force-app/main/default/objects/Opportunity/fields/PNNL_Parallel_Categorization__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Parallel_Categorization__c</fullName>
    <description>Lab selects parallel categorization to identify what type of work is being done</description>
    <inlineHelpText>Lab selects parallel categorization to identify what type of work is being done</inlineHelpText>
    <label>Parallel Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Inorganic Chemistry</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Market Analysis</fullName>
            </value>
            <value>
                <fullName>Modeling and Simulation</fullName>
            </value>
            <value>
                <fullName>Organic Chemistry</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Technical Systems Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>