force-app/main/default/objects/Opportunity/fields/PNNL_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program Manager will be part of the DOE Approval Process</description>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesKdXx</relationshipName>
    <type>Lookup</type>
</CustomField>