force-app/main/default/objects/Opportunity/fields/PNNL_Secondary_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Secondary_Taxonomy__c</fullName>
    <description>Lab selects secondary taxonomy to provide additional granularity</description>
    <inlineHelpText>Lab selects secondary taxonomy to provide additional granularity</inlineHelpText>
    <label>Secondary Taxonomy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PNNL_Primary_Taxonomy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Cloud Provisioning Workflows</fullName>
            </value>
            <value>
                <fullName>Computing Infrastructure</fullName>
            </value>
            <value>
                <fullName>Data Emulytics</fullName>
            </value>
            <value>
                <fullName>Electron Tomography</fullName>
            </value>
            <value>
                <fullName>Graphing</fullName>
            </value>
            <value>
                <fullName>HPC - Design and Methods</fullName>
            </value>
            <value>
                <fullName>Quantum Computing</fullName>
            </value>
            <value>
                <fullName>Damage Resistance</fullName>
            </value>
            <value>
                <fullName>Energetic Materials</fullName>
            </value>
            <value>
                <fullName>Materials Characterization</fullName>
            </value>
            <value>
                <fullName>Membranes</fullName>
            </value>
            <value>
                <fullName>Semiconductors/PV</fullName>
            </value>
            <value>
                <fullName>Structural Materials</fullName>
            </value>
            <value>
                <fullName>Superconductors</fullName>
            </value>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Biodefense</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
            <value>
                <fullName>Biomimetics</fullName>
            </value>
            <value>
                <fullName>Geonomics</fullName>
            </value>
            <value>
                <fullName>Metabolomics</fullName>
            </value>
            <value>
                <fullName>Molecular Biology</fullName>
            </value>
            <value>
                <fullName>Biology Proteomics</fullName>
            </value>
            <value>
                <fullName>Carbon Capture and Storage</fullName>
            </value>
            <value>
                <fullName>Carbon Capture and Utilization</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Combustion</fullName>
            </value>
            <value>
                <fullName>Fossil Fuels - Downstream/ Distribution</fullName>
            </value>
            <value>
                <fullName>Fossil Fuels - Upstream</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>