force-app/main/default/objects/Opportunity/fields/PNNL_SIPP_Submit_Approval_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PNNL_SIPP_Submit_Approval_Checkbox__c</fullName>
    <formula>AND(
RecordType.Name = &quot;SIPP&quot;,
ISPICKVAL(StageName,&quot;Proposal Preparation&quot;),
NOT(ISBLANK(Project_Coordinators__c)),
NOT(ISBLANK(Project_Manager3__c)),
NOT(ISBLANK(Contract_Specialist2__c)),
NOT(ISBLANK(SPP_Office_Reviewer2__c)),
NOT(ISBLANK(PNSO_Technical_Rep2__c)),
NOT(ISBLANK(PNSO_Contracting_Officer2__c))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIPP Submit Approval Checkbox</label>
    <type>Checkbox</type>
</CustomField>