force-app/main/default/objects/Opportunity/fields/PNNL_Work_Proposal_Manager2__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Work_Proposal_Manager2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNNL Work Proposal Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNNL_Work_Proposal_Manager_and_Principal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>