force-app/main/default/objects/Opportunity/fields/PNNL_Work_Proposal_Manager__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Work_Proposal_Manager__c</fullName>
    <label>PNNL Work Proposal Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>