force-app/main/default/objects/Opportunity/fields/PNSO_Animal_Research_Required__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Animal_Research_Required__c</fullName>
    <label>PNSO Animal Research Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>