force-app/main/default/objects/Opportunity/fields/PNSO_Animal_Researcher2__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Animal_Researcher2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Animal Researcher</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_Animal_Researcher__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesJd23</relationshipName>
    <type>Lookup</type>
</CustomField>