force-app/main/default/objects/Opportunity/fields/PNSO_Animal_Researcher__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Animal_Researcher__c</fullName>
    <label>PNSO Animal Researcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kimberly Harper</fullName>
                <default>true</default>
                <label>Kimberly Harper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>