force-app/main/default/objects/Opportunity/fields/PNSO_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator__c</fullName>
    <label>PNSO Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>