force-app/main/default/objects/Opportunity/fields/PNSO_Coordinator_Foreign_Approver__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator_Foreign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Coordinator - Foreign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesHcn1</relationshipName>
    <type>Lookup</type>
</CustomField>