force-app/main/default/objects/Opportunity/fields/PNSO_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Signed_Date__c</fullName>
    <label>PNSO Signed Date</label>
    <type>Date</type>
</CustomField>