force-app/main/default/objects/Opportunity/fields/PNSO_Technical_Rep__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Technical_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Technical Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_Technical_Reviewer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>