force-app/main/default/objects/Opportunity/fields/PNSOACTReviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSOACTReviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO ACT Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_ACT_Reviewer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>