force-app/main/default/objects/Opportunity/fields/Previous_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Total_Amount__c</fullName>
    <label>Previous Total Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>