force-app/main/default/objects/Opportunity/fields/Price_Anderson_Amendments_Act_PAAA__c.field-meta.xml
<CustomField>
    <fullName>Price_Anderson_Amendments_Act_PAAA__c</fullName>
    <label>Price-Anderson Amendments Act (PAAA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>