force-app/main/default/objects/Opportunity/fields/Principal_Place_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Principal_Place_of_Performance__c</fullName>
    <label>Principal Place of Performance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>