force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Project Management Office</label>
    <length>6</length>
    <type>Text</type>
</CustomField>