force-app/main/default/objects/Opportunity/fields/Program_Announcement_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Announcement_Number__c</fullName>
    <label>Program Announcement Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>