force-app/main/default/objects/Opportunity/fields/Program_Announcement_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Announcement_Title__c</fullName>
    <label>Program Announcement Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>