force-app/main/default/objects/Opportunity/fields/Program_Secretarial_Office__c.field-meta.xml
<CustomField>
    <fullName>Program_Secretarial_Office__c</fullName>
    <inlineHelpText>The office at DOE HQ identified that has the knowledge or mission interest in the work being proposed.</inlineHelpText>
    <label>Program Secretarial Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator of National Nuclear Security Administration</fullName>
            </value>
            <value>
                <fullName>Advanced Research Projects Agency - Energy</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary for Efficiency and Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary for Environmental Management</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary for Fossil Energy</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary for Policy and International Affairs</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary of Nuclear Energy</fullName>
            </value>
            <value>
                <fullName>Energy Information Administration</fullName>
            </value>
            <value>
                <fullName>Federal Energy Regulatory Commission</fullName>
            </value>
            <value>
                <fullName>Loan Programs Office</fullName>
            </value>
            <value>
                <fullName>Office of Congressional and Intergovernmental Affairs</fullName>
            </value>
            <value>
                <fullName>Office of Economic Impact and Diversity</fullName>
            </value>
            <value>
                <fullName>Office of Electricity Delivery and Energy Reliability</fullName>
            </value>
            <value>
                <fullName>Office of Energy and Threat</fullName>
            </value>
            <value>
                <fullName>Office of Health, Safety, and Security</fullName>
            </value>
            <value>
                <fullName>Office of Hearings and Appeals</fullName>
            </value>
            <value>
                <fullName>Office of Human Capital Management</fullName>
            </value>
            <value>
                <fullName>Office of Indian Energy Policy &amp; Programs</fullName>
            </value>
            <value>
                <fullName>Office of Inspector General</fullName>
            </value>
            <value>
                <fullName>Office of Legacy Management</fullName>
            </value>
            <value>
                <fullName>Office of Management</fullName>
            </value>
            <value>
                <fullName>Office of Public Affairs</fullName>
            </value>
            <value>
                <fullName>Office of Science</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Information Office</fullName>
            </value>
            <value>
                <fullName>Office of the General Counsel</fullName>
            </value>
            <value>
                <fullName>Southeastern Power Administration</fullName>
            </value>
            <value>
                <fullName>Southwestern Power Administration</fullName>
            </value>
            <value>
                <fullName>Western Area Power Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>