force-app/main/default/objects/Opportunity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>